@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.62';
+our $VERSION = '1.63';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -574,7 +574,7 @@ B<db-iris> [B<-rx>] [B<-d> I<date>] [B<-o> I<output-flags>]
 
 =head1 VERSION
 
-version 1.62
+version 1.63
 
 =head1 DESCRIPTION
 
