@@ -6,7 +6,7 @@ use 5.014;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.62';
+our $VERSION = '1.63';
 
 use Carp qw(confess cluck);
 use DateTime;
@@ -644,7 +644,7 @@ Travel::Status::DE::IRIS - Interface to IRIS based web departure monitors.
 
 =head1 VERSION
 
-version 1.62
+version 1.63
 
 =head1 DESCRIPTION
 
